greensock animation mobile problem fixed

--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -1,5 +1,6 @@
 /** banner  **/
 .banner-area {
+    top: 0 !important;
     background-color: $primary;
     background-repeat: no-repeat;
     background-position: 51% 32%;
