--- a/css/style.css
+++ b/css/style.css
@@ -756,6 +756,7 @@ a, .button, button {
 
 /** banner  **/
 .banner-area {
+  top: 0 !important;
   background-color: #C09679;
   background-repeat: no-repeat;
   background-position: 51% 32%; }
